--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -2,14 +2,17 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
+    "moduleResolution": "bundler",
+    "jsx": "react-jsx",
+
+    "checkJs": false,
+    "skipLibCheck": true,
+    "types": [],
 
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    },
-
-    "moduleResolution": "bundler",
-    "jsx": "react-jsx"
+    }
   },
   "include": ["src"]
 }
